@startuml database-erd
!pragma layout smetana
title NBA Analytics Platform — Database Schema (Prisma / Supabase PostgreSQL)\nAll 20 tables, as of migration 20260913140000_game_prediction_versioning

hide circle
skinparam shadowing false
skinparam linetype ortho
skinparam class {
  BackgroundColor White
  BorderColor Black
  ArrowColor Black
}

legend top left
  * = required (NOT NULL)    ? = optional (NULL allowed)
  PK = primary key    FK = foreign key
  Lines below the dotted divider are unique constraints and indexes.
  Crow's foot = "many"; bar = "exactly one"; circle = "zero".
endlegend

package "Accounts (BetterAuth core schema + profile fields)" {
  entity "User" as User {
    * id : uuid <<PK>>
    --
    * name : string
    * email : string <<unique>>
    * emailVerified : boolean = false
    image : string?
    * role : Role = USER
    username : string? <<unique>>
    avatarUrl : string? (storage object path)
    favoriteTeamId : uuid? <<FK>>
    * createdAt : datetime
    * updatedAt : datetime
  }

  entity "Session" as Session {
    * id : uuid <<PK>>
    --
    * userId : uuid <<FK>>
    * token : string <<unique>>
    * expiresAt : datetime
    ipAddress : string?
    userAgent : string?
    * createdAt : datetime
    * updatedAt : datetime
  }

  entity "Account" as Account {
    * id : uuid <<PK>>
    --
    * userId : uuid <<FK>>
    * accountId : string
    * providerId : string
    accessToken : string?
    refreshToken : string?
    accessTokenExpiresAt : datetime?
    refreshTokenExpiresAt : datetime?
    scope : string?
    idToken : string?
    password : string?
    * createdAt : datetime
    * updatedAt : datetime
  }

  entity "Verification" as Verification {
    * id : uuid <<PK>>
    --
    * identifier : string
    * value : string
    * expiresAt : datetime
    * createdAt : datetime
    * updatedAt : datetime
  }

  enum "Role" as Role {
    PUBLIC
    USER
    ANALYST
    ADMIN
  }
}

package "NBA data (apps/ingestion writes, API reads only)" {
  entity "Team" as Team {
    * id : uuid <<PK>>
    --
    * nbaTeamId : int <<unique>>
    * name : string
    * abbreviation : string
    * city : string
    * conference : string
    * division : string
    logoUrl : string?
  }

  entity "Player" as Player {
    * id : uuid <<PK>>
    --
    * nbaPlayerId : int <<unique>>
    * firstName : string
    * lastName : string
    * position : string
    heightInches : int?
    weightLbs : int?
    jerseyNumber : string?
    headshotUrl : string?
    teamId : uuid? <<FK>>
    birthDate : datetime?
    school : string?
    country : string?
    lastAffiliation : string?
    seasonExp : int?
    rosterStatus : string?
    draftYear : int?
    draftRound : int?
    draftNumber : int?
    ..
    index (teamId)
  }

  entity "Game" as Game {
    * id : uuid <<PK>>
    --
    * nbaGameId : string <<unique>>
    * gameDate : datetime
    * season : string
    * homeTeamId : uuid <<FK>>
    * awayTeamId : uuid <<FK>>
    homeScore : int?
    awayScore : int?
    * seasonType : SeasonType = REGULAR
    playoffRound : int?
    ..
    index (seasonType)
    index (gameDate)
    index (homeTeamId, gameDate)
    index (awayTeamId, gameDate)
  }

  entity "GameEvent" as GameEvent {
    * id : uuid <<PK>>
    --
    * gameId : uuid <<FK>>
    * sequence : int
    * period : int
    * clock : string
    * eventType : string
    playerId : string? (not a FK)
    * description : string
    * createdAt : datetime
    ..
    index (gameId, sequence)
  }

  entity "PlayerGameStat" as PlayerGameStat {
    * id : uuid <<PK>>
    --
    * playerId : uuid <<FK>>
    * gameId : uuid <<FK>>
    teamId : uuid? <<FK>> (team in this game)
    * minutes : int
    * points : int
    * rebounds : int
    * assists : int
    * steals : int
    * blocks : int
    * turnovers : int
    * fieldGoalsMade : int
    * fieldGoalsAttempted : int
    * threesMade : int
    * threesAttempted : int
    * freeThrowsMade : int
    * freeThrowsAttempted : int
    offensiveRebounds : int?
    defensiveRebounds : int?
    plusMinus : int?
    usagePercentage : float?
    offensiveRating : float?
    defensiveRating : float?
    ..
    unique (playerId, gameId)
    index (gameId)
  }

  enum "SeasonType" as SeasonType {
    REGULAR
    PLAY_IN
    PLAYOFFS
    FINALS
  }
}

package "Game prediction (apps/predictor writes, API reads only)" {
  entity "GamePrediction" as GamePrediction {
    * id : uuid <<PK>>
    --
    * gameId : uuid <<FK, unique>>
    * homeWinProbability : float
    * homeTeamEloPre : float
    * awayTeamEloPre : float
    predictedMarginHome : float?
    marginMethod : string?
    * modelVersion : string = "unversioned"
    * createdAt : datetime
    ..
    index (gameId)
  }

  entity "GamePredictionRun" as GamePredictionRun {
    * id : uuid <<PK>>
    --
    * gameId : uuid <<FK>>
    * modelVersion : string
    * homeWinProbability : float
    * homeTeamEloPre : float
    * awayTeamEloPre : float
    predictedMarginHome : float?
    marginMethod : string?
    * createdAt : datetime
    ..
    unique (gameId, modelVersion)
    index (gameId)
  }
}

package "Fantasy optimizer (apps/optimizer writes, API reads only)" {
  entity "PlayerPrediction" as PlayerPrediction {
    * id : uuid <<PK>>
    --
    * playerId : uuid <<FK>>
    * predictedFantasyPoints : float
    * salary : int
    * asOf : datetime
    ..
    index (playerId, asOf)
  }

  entity "Lineup" as Lineup {
    * id : uuid <<PK>>
    --
    * totalPredictedPoints : float
    * totalSalary : int
    * budget : int
    * createdAt : datetime
  }

  entity "LineupSlot" as LineupSlot {
    * id : uuid <<PK>>
    --
    * lineupId : uuid <<FK>>
    * playerId : uuid <<FK>>
    ..
    unique (lineupId, playerId)
  }
}

package "Personal data (API writes on a signed-in user's request)" {
  entity "UserFollowedPlayer" as UserFollowedPlayer {
    * userId : uuid <<FK>>
    * playerId : uuid <<FK>>
    * createdAt : datetime
    ..
    unique (userId, playerId)
  }

  entity "GamePick" as GamePick {
    * id : uuid <<PK>>
    --
    * userId : uuid <<FK>>
    * gameId : uuid <<FK>>
    * pickedTeamId : string (not a FK)
    * outcome : PickOutcome
    * modelHomeWinProbabilityAtPick : float
    modelPredictedMarginAtPick : float?
    * homeTeamEloAtPick : float
    * awayTeamEloAtPick : float
    * createdAt : datetime
    ..
    unique (userId, gameId)
    index (userId, createdAt)
  }

  entity "SavedComparison" as SavedComparison {
    * id : uuid <<PK>>
    --
    * userId : uuid <<FK>>
    * name : string
    * createdAt : datetime
    ..
    index (userId, createdAt)
  }

  entity "SavedComparisonPlayer" as SavedComparisonPlayer {
    * id : uuid <<PK>>
    --
    * savedComparisonId : uuid <<FK>>
    * playerId : uuid <<FK>>
    * position : int (left-to-right order)
    ..
    unique (savedComparisonId, playerId)
  }

  entity "SavedLineup" as SavedLineup {
    * id : uuid <<PK>>
    --
    * userId : uuid <<FK>>
    * name : string
    sourceLineupId : string? (not a FK)
    * totalPredictedPointsAtSave : float
    * totalSalaryAtSave : int
    * budgetAtSave : int
    * createdAt : datetime
    ..
    index (userId, createdAt)
  }

  entity "SavedLineupSlot" as SavedLineupSlot {
    * id : uuid <<PK>>
    --
    * savedLineupId : uuid <<FK>>
    * playerId : uuid <<FK>>
    * predictedPointsAtSave : float
    * salaryAtSave : int
    ..
    unique (savedLineupId, playerId)
  }

  enum "PickOutcome" as PickOutcome {
    CORRECT
    MISSED
  }
}

' --- Account relationships ---
User ||--o{ Session : "has"
User ||--o{ Account : "has (per sign-in provider)"
Team |o--o{ User : "favourite team"

' --- NBA data relationships ---
Team |o--o{ Player : "current roster"
Team ||--o{ Game : "homeTeam"
Team ||--o{ Game : "awayTeam"
Game ||--o{ GameEvent : "play-by-play"
Game ||--o{ PlayerGameStat : "box score rows"
Player ||--o{ PlayerGameStat : "per-game stats"
Team |o--o{ PlayerGameStat : "team played for"

' --- Prediction relationships ---
Game ||--o| GamePrediction : "current prediction"
Game ||--o{ GamePredictionRun : "prediction history"

' --- Optimizer relationships ---
Player ||--o{ PlayerPrediction : "fantasy point predictions"
Player ||--o{ LineupSlot : "appears in"
Lineup ||--o{ LineupSlot : "5 players per lineup"

' --- Personal data relationships ---
User ||--o{ UserFollowedPlayer : "follows"
Player ||--o{ UserFollowedPlayer : "followed by"
User ||--o{ GamePick : "calls"
Game ||--o{ GamePick : "called in"
User ||--o{ SavedComparison : "saves"
SavedComparison ||--o{ SavedComparisonPlayer : "contains"
Player ||--o{ SavedComparisonPlayer : "compared in"
User ||--o{ SavedLineup : "saves"
SavedLineup ||--o{ SavedLineupSlot : "contains"
Player ||--o{ SavedLineupSlot : "picked in"

' --- Enum usage ---
User .. Role : "role"
Game .. SeasonType : "seasonType"
GamePick .. PickOutcome : "outcome"

@enduml
